--- a/tests/testem.html
+++ b/tests/testem.html
@@ -11,6 +11,7 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
 
+    <script src="/testem.js" integrity=""></script>
     <script>
       QUnit.start();
     </script>
